[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/menu/InputLine.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fonts/smashcat.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/menu/InputMapper.gd" type="Script" id=3]
[ext_resource path="res://src/menu/InputLines.gd" type="Script" id=4]
[ext_resource path="res://assets/img/menu/boutons.png" type="Texture" id=5]
[ext_resource path="res://src/menu/KeyMapper.gd" type="Script" id=6]

[node name="InputMapper" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
custom_constants/separation = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerSelect" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 240.0
margin_bottom = 6.0
alignment = 1

[node name="P1" type="Label" parent="VBoxContainer/PlayerSelect"]
margin_right = 57.0
margin_bottom = 6.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.917647, 0.882353, 0.941176, 1 )
text = "P1"
align = 1

[node name="P2" type="Label" parent="VBoxContainer/PlayerSelect"]
margin_left = 61.0
margin_right = 118.0
margin_bottom = 6.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.917647, 0.882353, 0.941176, 1 )
text = "P2"
align = 1

[node name="P3" type="Label" parent="VBoxContainer/PlayerSelect"]
margin_left = 122.0
margin_right = 179.0
margin_bottom = 6.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.917647, 0.882353, 0.941176, 1 )
text = "P3"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P4" type="Label" parent="VBoxContainer/PlayerSelect"]
margin_left = 183.0
margin_right = 240.0
margin_bottom = 6.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.917647, 0.882353, 0.941176, 1 )
text = "P4"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labels" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 15.0
margin_right = 240.0
margin_bottom = 21.0

[node name="Action" type="Label" parent="VBoxContainer/Labels"]
margin_right = 118.0
margin_bottom = 6.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.917647, 0.882353, 0.941176, 1 )
text = "Action"
align = 1
uppercase = true

[node name="Input" type="Label" parent="VBoxContainer/Labels"]
margin_left = 122.0
margin_right = 240.0
margin_bottom = 6.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.917647, 0.882353, 0.941176, 1 )
text = "Input"
align = 1
uppercase = true

[node name="InputLines" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 240.0
margin_bottom = 126.0
script = ExtResource( 4 )

[node name="A" parent="VBoxContainer/InputLines" instance=ExtResource( 1 )]
margin_bottom = 16.0
texture = ExtResource( 5 )

[node name="B" parent="VBoxContainer/InputLines" instance=ExtResource( 1 )]
margin_top = 20.0
margin_bottom = 36.0
texture = ExtResource( 5 )

[node name="LEFT" parent="VBoxContainer/InputLines" instance=ExtResource( 1 )]
margin_top = 40.0
margin_bottom = 56.0
texture = ExtResource( 5 )

[node name="RIGHT" parent="VBoxContainer/InputLines" instance=ExtResource( 1 )]
margin_top = 60.0
margin_bottom = 76.0
texture = ExtResource( 5 )

[node name="START" parent="VBoxContainer/InputLines" instance=ExtResource( 1 )]
margin_top = 80.0
margin_bottom = 96.0
texture = ExtResource( 5 )

[node name="KeyMapper" type="Node" parent="."]
script = ExtResource( 6 )
